--- a/package.json
+++ b/package.json
@@ -1,31 +1,31 @@
 {
-  "type": "module",
   "scripts": {
-    "dev": "wrangler pages dev -- vite",
-    "serve": "wrangler pages dev dist/client -b ENVIRONMENT=production",
+    "dev": "npm run server:dev",
+    "prod": "npm run lint && npm run build && npm run server:prod",
     "build": "vite build",
-    "lint": "eslint . --fix"
+    "server:dev": "node ./server",
+    "server:prod": "cross-env NODE_ENV=production node ./server",
+    "lint": "eslint . --max-warnings 0"
   },
   "dependencies": {
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "wrangler": "^3.57.1"
-  },
-  "devDependencies": {
-    "@antfu/eslint-config": "^2.6.2",
-    "@cloudflare/workers-types": "^4.20231218.0",
-    "@types/node": "^20.10.7",
-    "@types/react": "^18.2.47",
-    "@types/react-dom": "^18.2.18",
     "@vitejs/plugin-react": "^4.2.1",
-    "eslint": "^8.56.0",
+    "compression": "^1.7.4",
+    "cross-env": "^7.0.3",
+    "eslint": "^8.55.0",
     "eslint-plugin-react": "^7.33.2",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.5",
-    "typescript": "^5.3.3",
-    "unplugin-auto-import": "^0.17.3",
-    "vike": "^0.4.156",
-    "vike-react": "^0.3.8",
-    "vite": "^5.0.11"
+    "express": "^4.18.2",
+    "node-fetch": "^3.3.2",
+    "prop-types": "15.8.1",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "sirv": "^2.0.3",
+    "vike": "^0.4.172",
+    "vite": "^5.0.10"
+  },
+  "type": "module",
+  "devDependencies": {
+    "@typescript-eslint/eslint-plugin": "^7.10.0"
   }
 }
